merge release crypto-primitives 0.7.0.0