@@ -17,8 +17,8 @@ import ch.post.it.evoting.cryptoprimitives.math.GqGroup;
 import ch.post.it.evoting.cryptoprimitives.math.ZqElement;
 import ch.post.it.evoting.cryptoprimitives.math.ZqGroup;
 import ch.post.it.evoting.cryptoprimitives.random.RandomService;
-import ch.post.it.evoting.cryptoprimitives.test.tools.data.GqGroupTestData;
-import ch.post.it.evoting.cryptoprimitives.test.tools.utils.GqGroupMemberGenerator;
+import ch.post.it.evoting.cryptoprimitives.test.tools.data.GroupTestData;
+import ch.post.it.evoting.cryptoprimitives.test.tools.generator.GqGroupGenerator;
 
 class ElGamalMultiRecipientEncryptionDecryptionTest {
 
@@ -26,7 +26,7 @@ class ElGamalMultiRecipientEncryptionDecryptionTest {
 
 	private static RandomService randomService;
 	private static GqGroup gqGroup;
-	private static GqGroupMemberGenerator generator;
+	private static GqGroupGenerator generator;
 	private static ZqGroup zqGroup;
 
 	private static ElGamalMultiRecipientMessage message;
@@ -34,14 +34,14 @@ class ElGamalMultiRecipientEncryptionDecryptionTest {
 	@BeforeAll
 	static void setUpAll() {
 		randomService = new RandomService();
-		gqGroup = GqGroupTestData.getGroup();
+		gqGroup = GroupTestData.getGqGroup();
 		zqGroup = ZqGroup.sameOrderAs(gqGroup);
-		generator = new GqGroupMemberGenerator(gqGroup);
+		generator = new GqGroupGenerator(gqGroup);
 	}
 
 	@BeforeEach
 	void setUp() {
-		List<GqElement> validMessageElements = Stream.generate(generator::genGqElementMember).limit(NUM_ELEMENTS).collect(Collectors.toList());
+		List<GqElement> validMessageElements = Stream.generate(generator::genMember).limit(NUM_ELEMENTS).collect(Collectors.toList());
 		message = new ElGamalMultiRecipientMessage(validMessageElements);
 	}
 
@@ -57,7 +57,7 @@ class ElGamalMultiRecipientEncryptionDecryptionTest {
 
 	@RepeatedTest(10)
 	void testEncryptAndDecryptWithLongerKeysGivesOriginalMessage() {
-		ElGamalMultiRecipientKeyPair keyPair = ElGamalMultiRecipientKeyPair.genKeyPair(gqGroup, NUM_ELEMENTS+1, randomService);
+		ElGamalMultiRecipientKeyPair keyPair = ElGamalMultiRecipientKeyPair.genKeyPair(gqGroup, NUM_ELEMENTS + 1, randomService);
 		ZqElement exponent = randomService.genRandomExponent(zqGroup);
 		ElGamalMultiRecipientCiphertext ciphertext = ElGamalMultiRecipientCiphertext.getCiphertext(message, exponent, keyPair.getPublicKey());
 		ElGamalMultiRecipientMessage decryptedMessage = ElGamalMultiRecipientMessage.getMessage(ciphertext, keyPair.getPrivateKey());
@@ -81,12 +81,12 @@ class ElGamalMultiRecipientEncryptionDecryptionTest {
 
 	@Test
 	void testEncryptAndDecryptWithDifferentLongerKeysGivesDifferentMessage() {
-		ElGamalMultiRecipientKeyPair keyPair = ElGamalMultiRecipientKeyPair.genKeyPair(gqGroup, NUM_ELEMENTS+1, randomService);
+		ElGamalMultiRecipientKeyPair keyPair = ElGamalMultiRecipientKeyPair.genKeyPair(gqGroup, NUM_ELEMENTS + 1, randomService);
 		ZqElement exponent = randomService.genRandomExponent(zqGroup);
 		ElGamalMultiRecipientCiphertext ciphertext = ElGamalMultiRecipientCiphertext.getCiphertext(message, exponent, keyPair.getPublicKey());
 		ElGamalMultiRecipientKeyPair differentKeyPair;
 		do {
-			differentKeyPair = ElGamalMultiRecipientKeyPair.genKeyPair(gqGroup, NUM_ELEMENTS+1, randomService);
+			differentKeyPair = ElGamalMultiRecipientKeyPair.genKeyPair(gqGroup, NUM_ELEMENTS + 1, randomService);
 		} while (differentKeyPair.equals(keyPair));
 		ElGamalMultiRecipientMessage differentMessage = ElGamalMultiRecipientMessage.getMessage(ciphertext, differentKeyPair.getPrivateKey());
 
@@ -95,9 +95,10 @@ class ElGamalMultiRecipientEncryptionDecryptionTest {
 
 	@Test
 	void testEncryptAndDecryptWithDifferentKeySizesGivesDifferentMessage() {
-		ElGamalMultiRecipientKeyPair keyPair = ElGamalMultiRecipientKeyPair.genKeyPair(gqGroup, NUM_ELEMENTS+1, randomService);
+		ElGamalMultiRecipientKeyPair keyPair = ElGamalMultiRecipientKeyPair.genKeyPair(gqGroup, NUM_ELEMENTS + 1, randomService);
 		ZqElement exponent = randomService.genRandomExponent(zqGroup);
-		ElGamalMultiRecipientPublicKey publicKey = new ElGamalMultiRecipientPublicKey(keyPair.getPublicKey().toList().subList(0, NUM_ELEMENTS));
+		ElGamalMultiRecipientPublicKey publicKey =
+				new ElGamalMultiRecipientPublicKey(keyPair.getPublicKey().stream().limit(NUM_ELEMENTS).collect(Collectors.toList()));
 		ElGamalMultiRecipientCiphertext ciphertext = ElGamalMultiRecipientCiphertext.getCiphertext(message, exponent, publicKey);
 		ElGamalMultiRecipientPrivateKey longerPrivateKey = keyPair.getPrivateKey();
 		ElGamalMultiRecipientMessage differentMessage = ElGamalMultiRecipientMessage.getMessage(ciphertext, longerPrivateKey);
